--- a/scss/style.scss
+++ b/scss/style.scss
@@ -616,7 +616,7 @@ textarea {
 		position: absolute;
 		top: 0;
 		left: 0;
-		height: 130vh;
+		height: 100%;
 		width: 100vw;
 		background-size: cover;
 		background-position: center;
@@ -649,8 +649,6 @@ form {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	// width: 600px;
-	// height: 550px;
 	margin: 2rem auto;
 	padding: 6rem 6rem;
 	background-color: rgba(255, 255, 255, 0.808);
